cdk(feat): add user info endpoint
- Adds the following endpoint:
    - GET `/users/{username}`: returns the actor object associated with
      `username`. invokes `lambda/describe_user` that hard-codes the
      response so far.

  Adds the model for an actor object.

  Updates the OpenAPI definition for development.
